--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -1,12 +1,16 @@
 ---
-title: Our Blog
+title: Mac Farr
 layout: default
 ---
 
 <div class="container max-w-3xl mt-6 px-6">
-
-    <h1 class="font-bold text-5xl">{{title}}</h1>
-
-    {{ content | safe }}
-
+  <div class="prose">
+    <h1 class="font-bold text-5xl">Resurget: Life in Detroit</h1>
+    <h3>Politics and Development in Detroit and Michigan.</h3>
+    <p>
+      How to bring more investment, more stability, and produce better outcomes
+      in your neighborhood.
+    </p>
+  </div>
+  {{ content | safe }}
 </div>
