--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -5,16 +5,69 @@
 /*Your Custom CSS Goes here*/
 
 h1 {
-  @apply text-4xl tracking-tighter mb-3 text-center lg:text-7xl;
+  @apply text-4xl tracking-tighter mb-3 lg:text-7xl;
 }
 
 h3 {
   @apply text-2xl font-bold mb-3;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: var(--gap);
+  gap: var(--gap);
+}
+
+.prose {
+  --text: inherit;
+  --tw-prose-body: var(--text);
+  --tw-prose-headings: var(--text);
+  --tw-prose-lead: var(--text);
+  --tw-prose-links: var(--text);
+  --tw-prose-bold: var(--text);
+  --tw-prose-counters: var(--text);
+  --tw-prose-bullets: var(--text);
+  --tw-prose-hr: var(--text);
+  --tw-prose-quotes: var(--text);
+  --tw-prose-quote-borders: var(--text);
+  --tw-prose-captions: var(--text);
+  --tw-prose-code: var(--text);
+  --tw-prose-pre-code: var(--text);
+  --tw-prose-pre-bg: var(--text);
+  --tw-prose-th-borders: var(--text);
+  --tw-prose-td-borders: var(--text);
+  --tw-prose-invert-body: var(--text);
+  --tw-prose-invert-headings: var(--text);
+  --tw-prose-invert-lead: var(--text);
+  --tw-prose-invert-links: var(--text);
+  --tw-prose-invert-bold: var(--text);
+  --tw-prose-invert-counters: var(--text);
+  --tw-prose-invert-bullets: var(--text);
+  --tw-prose-invert-hr: var(--text);
+  --tw-prose-invert-quotes: var(--text);
+  --tw-prose-invert-quote-borders: var(--text);
+  --tw-prose-invert-captions: var(--text);
+  --tw-prose-invert-code: var(--text);
+  --tw-prose-invert-pre-code: var(--text);
+  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
+  --tw-prose-invert-th-borders: var(--text);
+  --tw-prose-invert-td-borders: var(--text);
+  font-size: 1rem;
+  line-height: 1.75;
+}
+
+.prose a {
+  @apply text-sky-400;
+}
+
 /* Syntax Highlighting*/
 
-body :not(pre) > code[class*="language-"],
-body pre[class*="language-"] {
+body {
+  @apply bg-green-900 text-white;
+}
+
+body :not(pre) > code[class*='language-'],
+body pre[class*='language-'] {
   @apply bg-gray-800;
 }
