style(blog.html, index.html): adjust heading sizes and add Recent Posts heading to blog.html

--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -11,6 +11,7 @@ layout: default
       How to bring more investment, more stability, and produce better outcomes
       in your neighborhood.
     </p>
+    <h2 class="text-3xl pb-3 border-sky-500 border-b">Recent Posts</h2>
   </div>
   {{ content | safe }}
 </div>
