--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -4,14 +4,11 @@ layout: default
 ---
 
 <div class="container max-w-3xl mt-6 px-6">
-  <div class="prose">
-    <h1 class="font-bold text-5xl">Resurget: Life in Detroit</h1>
-    <h3>Politics and Development in Detroit and Michigan.</h3>
-    <p>
-      How to bring more investment, more stability, and produce better outcomes
-      in your neighborhood.
-    </p>
-    <h2 class="text-3xl pb-3 border-sky-500 border-b">Recent Posts</h2>
-  </div>
+  <h1 class="font-bold text-5xl mb-5">Resurget: Life in Detroit</h1>
+  <h3>Politics and Development in Detroit and Michigan.</h3>
+  <p class="pb-5 mb-5 border-sky-500 border-b">
+    How to bring more investment, more stability, and produce better outcomes in
+    your neighborhood.
+  </p>
   {{ content | safe }}
 </div>
