style(blog.html): change h3 tag to h2 tag for better semantic structure feat(default.html): add meta description tag for SEO purposes style(footer.html): update footer style and remove unnecessary content
style(navbar.html, posts.html, contact/index.html): update color scheme and formatting

style(index.html): change text color of "Read more" link to text-sky-300
style(press/index.html): change text color of press link titles to text-sky-300
style(tailwind.css): add min-height of 100vh to body element and change color of links in prose class to text-sky-300

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -58,13 +58,14 @@ h3 {
 }
 
 .prose a {
-  @apply text-sky-400;
+  @apply text-sky-300;
 }
 
 /* Syntax Highlighting*/
 
 body {
   @apply bg-green-900 text-white;
+  min-height: 100vh;
 }
 
 body :not(pre) > code[class*='language-'],
