--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container max-w-3xl mt-6 px-6">
   <h1 class="font-bold text-5xl">Resurget: Life in Detroit</h1>
   <div class="py-4 my-6 border-sky-500 border-b border-t">
-    <h3>Politics and Development in Detroit and Michigan.</h3>
+    <h2 class="text-xl">Politics and Development in Detroit and Michigan.</h2>
     <p>
       How to bring more investment, more stability, and produce better outcomes
       in your neighborhood.
