--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Politics and Development in Detroit and Michigan.
+    "
+    />
     <title>{{title}}</title>
     {% if description %}
     <meta name="description" content="{{description}}" />
@@ -18,9 +23,8 @@
     {% endif %}
   </head>
   <body>
-    {% include "./partials/navbar.html" %} {{ content | safe }}
-
-    <!-- {% include "./partials/footer.html" %} -->
+    {% include "./partials/navbar.html" %} {{ content | safe }} {% include
+    "./partials/footer.html" %}
 
     <script src="/static/js/alpine.js"></script>
 
