--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,18 +1,6 @@
 <footer
-  class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4"
+  class="{{ 'fixed' if path == 'home' }} bg-sky-900  text-white text-center w-full py-8 mt-20"
+  style="position: sticky; top: 100vh"
 >
-  <small class="text-gray-500"
-    >Copyright © {{settings.name}} 2020. Made with ❤ by
-    <a href="{{settings.url}}" target="_blank" class="underline"
-      >{{settings.author}}</a
-    >
-    •
-    <a
-      href="https://github.com/surjithctly/neat-starter"
-      class="underline"
-      target="_blank"
-      rel="noopener"
-      >View on Github</a
-    >
-  </small>
+  <small>© {{settings.name}} 2022</small>
 </footer>
