--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -6,10 +6,7 @@ layout: default
   <div class="pb-5 mb-5 border-b border-sky-500">
     <h1 class="font-bold text-5xl text-center">{{title}}</h1>
     <p class="text-center text-base leading-6 font-medium text-sky-200">
-      <time>
-        {{ date | readableDate }} by
-        <a>{{ author }}</a>
-      </time>
+      <time>{{ date | readableDate }} by {{ author }}</time>
     </p>
   </div>
   <article class="prose lg:prose-xl my-4 mx-auto">{{ content | safe }}</article>
