feat(posts.html): add comments section using Disqus style(tailwind.css): center Disqus comments section and limit its width to 65 characters

--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -9,5 +9,28 @@ layout: default
       <time>{{ date | readableDate }} by {{ author }}</time>
     </p>
   </div>
-  <article class="prose lg:prose-xl my-4 mx-auto">{{ content | safe }}</article>
+  <article class="prose lg:prose-xl mt-4 mb-8 mx-auto">
+    {{ content | safe }}
+  </article>
+  <h2 class="text-3xl text-center font-bold mb-8">Comments</h2>
+  <div id="disqus_thread"></div>
+  <noscript
+    >Please enable JavaScript to view the
+    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus. </a>
+  </noscript>
+  <script>
+    var disqus_config = function () {
+      this.page.url = window.location.href
+      this.page.identifier = document.title
+    }
+
+    ;(function () {
+      // DON'T EDIT BELOW THIS LINE
+      var d = document,
+        s = d.createElement('script')
+      s.src = 'https://mac-farr.disqus.com/embed.js'
+      s.setAttribute('data-timestamp', +new Date())
+      ;(d.head || d.body).appendChild(s)
+    })()
+  </script>
 </div>
